--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@ footer {
 }
 
 #social-links1 a {
-display: flex;
-  align-items: left;
-  justify-content: left;
+display: flex-end;
+  align-items: righ;
+  justify-content: righ;
   padding: 16px;
 
   transition: background 0.2s;
