--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ footer {
 
 #social-links1 a {
 display: flex-end;
-  align-items: righ;
-  justify-content: righ;
-  padding: 16px;
+  align-items: right 0 ;
+  justify-content: right 0;
+  padding: 10px;
 
   transition: background 0.2s;
   border-radius: 50%;
